<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Advisor 2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">ToDoPreview</string>
    <string name="title_activity_to_do_preview">ToDoPreview</string>
    <string name="title_activity_add_to_do">AddToDoActivity</string>
    <string name="title_activity_view_or_change_to_do">ViewOrChangeToDo</string>
    <string name="status_string">Selected:</string>
    <string name="new_to_do">NEW</string>
    <string name="save_button">Save</string>
    <string name="choose_date">Choose Date</string>
    <string name="save_existing_button">Save</string>
    <string name="active_radiobutton">Active</string>
    <string name="completed_radiobutton">Set completed</string>
    <string name="deleted_radiobutton">Set deleted</string>
	<string name="cancel_button">Cancel</string>
	<string name="all_spinner_choice">All</string>
	<string name="only_overdue_spinner_choice">Only overdue</string>
	<string name="only_upcoming_spinner_choice">Only upcoming</string>
	<string name="completed_spinner_choice">Completed</string>
	<string name="deleted_spinner_choice">Deleted</string>
	<color name="overdue_color">#ff0000</color>
	<color name="upcoming_color">#00ff00</color>
	<string name="title_hint">Title</string>
	<string name="description_hint">Description</string>
	
</resources>

