<ScrollView 
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">
    
	<RelativeLayout    
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".ViewOrChangeToDo" >
	
	    <TextView
	        android:id="@+id/showMyDate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	
	    <Button
	        android:id="@+id/saveToDo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/radioGroup1"
	        android:layout_marginTop="23dp"
	        android:onClick="saveExistingToDo"
	        android:text="@string/save_existing_button" />
	
	    <EditText
	        android:id="@+id/enterDescription"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/enterTitle"
	        android:layout_below="@+id/enterTitle"
	        android:layout_marginTop="36dp"
	        android:ems="10"
	        android:inputType="textMultiLine"
	        android:hint="@string/description_hint" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/enterTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/myDatePickerButton"
	        android:layout_below="@+id/myDatePickerButton"
	        android:layout_marginTop="35dp"
	        android:inputType="text"
	        android:hint="@string/title_hint"
	        android:ems="10" />
	
	    <Button
	        android:id="@+id/myDatePickerButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/showMyDate"
	        android:layout_below="@+id/showMyDate"
	        android:layout_marginTop="18dp"
	        android:text="@string/choose_date" />
	
	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/enterDescription"
	        android:layout_marginRight="15dp">
	        <RadioButton
	            android:id="@+id/radio0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="@string/active_radiobutton" />
	        <RadioButton
	        	android:id="@+id/radio1"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/completed_radiobutton" />
	    	<RadioButton
	       		 android:id="@+id/radio2"
	       		 android:layout_width="wrap_content"
	       		 android:layout_height="wrap_content"
	        	 android:text="@string/deleted_radiobutton" />
	    </RadioGroup>
	
	</RelativeLayout>
</ScrollView>