<ScrollView 
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">
    	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".AddToDoActivity" >
	
	    <TextView
	        android:id="@+id/showMyDate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	
	    <Button
	        android:id="@+id/myDatePickerButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_date" />
	
	    <EditText
	        android:id="@+id/enterTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:inputType="text"
	        android:hint="@string/title_hint" >
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/enterDescription"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine"
	        android:hint="@string/description_hint" />
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/saveToDo"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.60"
	            android:onClick="saveNewToDo"
	            android:text="@string/save_button" />
	
	        <Button
	            android:id="@+id/cancel"
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.60"
	            android:onClick="cancelSaving"
	            android:text="@string/cancel_button" />
	
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>